#ifndef ARITHMETIC_GRPC_H_
#define ARITHMETIC_GRPC_H_
#include <arithmetic_grpc/average_client.h>
#include <arithmetic_grpc/average_service.h>
#include <arithmetic_grpc/grpc_utils.h>
#include <arithmetic_grpc/max_client.h>
#include <arithmetic_grpc/max_service.h>
#include <arithmetic_grpc/prime_client.h>
#include <arithmetic_grpc/prime_service.h>
#include <arithmetic_grpc/sum_client.h>
#include <arithmetic_grpc/sum_service.h>
#endif